profiles on about us page no longer overlap with rest of elements on mobile display

--- a/client/src/styles/AboutStyle.css
+++ b/client/src/styles/AboutStyle.css
@@ -1,20 +1,21 @@
 .profile{
     display: flex;
-    height: 550px;
 }
 
 .profile-photo{
-    height: 500px;
-    width: auto;
+    height: 100%;
+    width: 50%;
     margin: 20px;
     border-radius: 20px;
+    margin: 2%;
+    align-self: center;
 }
 
 .profile-content{
     display: flex;
     flex-direction: column;
     align-self: center;
-    margin: 40px;
+    margin: 2%;
 }
 
 .profile p{
